# cachecore

./: LICENSE  README.md  setup.cfg
cachecore/: __init__.py  serializers.py  singletons.py  utils.py
cachecore/backends/: __init__.py  base.py  dummy.py  file.py  local.py  redis.py
cachecore/caches/: dummy.py  local.py
cachecore/dicts/: base.py  file.py
docs/source/: conf.py  index.rst
pycachecore/: utils.py
pycachecore/caches/: __init__.py  base.py  local.py
src/cachecore/: __init__.py  base.py  dummy.py  file.py  interface.py  local.py  memcached.py  redis.py  serializers.py  utils.py
src/cachecore/backends/: base.py  dummy.py  local.py  redis.py
src/cachecore/caches/: __init__.py  base.py  dummy.py  file.py  interface.py  local.py  memcached.py  redis.py
src/cachecore/dicts/: file.py  redis.py
src/pycachecore/: __init__.py
src/pycachecore/caches/: dummy.py  file.py  redis.py
tests/: test_backends.py  test_caches.py  test_serializers.py  test_utils.py
