[metadata]
name = cachecore
version = 0.4a1
author = Ryan Kroon
author_email = rykroon.tech@gmail.com
description = A low level cache library.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rykroon/cachecore
project_urls =
    Source Code = https://github.com/rykroon/cachecore/
    Bug Tracker = https://github.com/rykroon/cachecore/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
test_suite = tests

[options.packages.find]
where = src
